[gd_scene load_steps=103 format=3 uid="uid://sahotgxx8wh4"]

[ext_resource type="Texture2D" uid="uid://bqa7iby2puhke" path="res://Sprites/NPCs/WisdomSlime/Slime.png" id="1_byrvp"]
[ext_resource type="Script" path="res://Nodes/NPCs/WisdomSlime/wisdom_slime.gd" id="1_xvhjn"]
[ext_resource type="Texture2D" uid="uid://c27s1ovsslmys" path="res://Sprites/NPCs/WisdomSlime/Slime Death.png" id="2_dt1at"]
[ext_resource type="Texture2D" uid="uid://bbjy4dy4e0whe" path="res://Sprites/NPCs/WisdomSlime/Slime Walk.png" id="3_anxm0"]
[ext_resource type="Texture2D" uid="uid://c2r8yom7rt874" path="res://Sprites/NPCs/WisdomSlime/SlimeAttack1.png" id="5_kkkcb"]

[sub_resource type="Animation" id="Animation_1qgsc"]
resource_name = "Idle"
loop_mode = 1
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anim:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Anim:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_501v8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anim:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Anim:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_fwuv1"]
resource_name = "Walk"
loop_mode = 1
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anim:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Walk"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Anim:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_dqrbf"]
resource_name = "Death"
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anim:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Anim:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0166667, 0.0333333, 0.05, 0.0666667, 0.0833333, 0.1, 0.116667, 0.133333, 0.15, 0.166667, 0.183333, 0.2, 0.216667, 0.233333, 0.25, 0.266667, 0.283333, 0.3, 0.316667, 0.333333, 0.35, 0.366667, 0.383333, 0.4, 0.416667, 0.433333, 0.45, 0.466667, 0.483333, 0.5, 0.516667, 0.533333, 0.55, 0.566667, 0.583333, 0.6, 0.616667, 0.633333, 0.65, 0.666667, 0.683333, 0.7, 0.716667, 0.733333, 0.75, 0.766667, 0.783333, 0.8, 0.816667, 0.833333, 0.85, 0.866667, 0.883333, 0.9, 0.916667, 0.933333, 0.95, 0.966667, 0.983333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p0hm7"]
_data = {
"Death": SubResource("Animation_dqrbf"),
"Idle": SubResource("Animation_1qgsc"),
"RESET": SubResource("Animation_501v8"),
"Walk": SubResource("Animation_fwuv1")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_fubbs"]
atlas = ExtResource("2_dt1at")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_eh0pn"]
atlas = ExtResource("2_dt1at")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yynof"]
atlas = ExtResource("2_dt1at")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpr5j"]
atlas = ExtResource("2_dt1at")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhv7c"]
atlas = ExtResource("2_dt1at")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ae05f"]
atlas = ExtResource("2_dt1at")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_unu71"]
atlas = ExtResource("2_dt1at")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ka2jw"]
atlas = ExtResource("2_dt1at")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahjs6"]
atlas = ExtResource("2_dt1at")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdqlf"]
atlas = ExtResource("2_dt1at")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0stb"]
atlas = ExtResource("2_dt1at")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2bt0"]
atlas = ExtResource("2_dt1at")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mq3y"]
atlas = ExtResource("2_dt1at")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfgrn"]
atlas = ExtResource("2_dt1at")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_toweq"]
atlas = ExtResource("2_dt1at")
region = Rect2(64, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8hgq"]
atlas = ExtResource("2_dt1at")
region = Rect2(80, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuy14"]
atlas = ExtResource("2_dt1at")
region = Rect2(96, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wq2w8"]
atlas = ExtResource("2_dt1at")
region = Rect2(112, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_caeay"]
atlas = ExtResource("2_dt1at")
region = Rect2(128, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjdtw"]
atlas = ExtResource("2_dt1at")
region = Rect2(144, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v4cn"]
atlas = ExtResource("2_dt1at")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_53bbn"]
atlas = ExtResource("2_dt1at")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_p85hc"]
atlas = ExtResource("2_dt1at")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdxyc"]
atlas = ExtResource("2_dt1at")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfa0o"]
atlas = ExtResource("2_dt1at")
region = Rect2(64, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_30lfv"]
atlas = ExtResource("2_dt1at")
region = Rect2(80, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s13vu"]
atlas = ExtResource("2_dt1at")
region = Rect2(96, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejppe"]
atlas = ExtResource("2_dt1at")
region = Rect2(112, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yp4tq"]
atlas = ExtResource("2_dt1at")
region = Rect2(128, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccmcm"]
atlas = ExtResource("2_dt1at")
region = Rect2(144, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7snwp"]
atlas = ExtResource("2_dt1at")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h14em"]
atlas = ExtResource("2_dt1at")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjsau"]
atlas = ExtResource("2_dt1at")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0m7yf"]
atlas = ExtResource("2_dt1at")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w68rq"]
atlas = ExtResource("2_dt1at")
region = Rect2(64, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_avp7x"]
atlas = ExtResource("2_dt1at")
region = Rect2(80, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4jp1"]
atlas = ExtResource("2_dt1at")
region = Rect2(96, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4rc0"]
atlas = ExtResource("2_dt1at")
region = Rect2(112, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3n8b1"]
atlas = ExtResource("2_dt1at")
region = Rect2(128, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sybhr"]
atlas = ExtResource("2_dt1at")
region = Rect2(144, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cy6jv"]
atlas = ExtResource("2_dt1at")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tike4"]
atlas = ExtResource("2_dt1at")
region = Rect2(16, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2p24"]
atlas = ExtResource("2_dt1at")
region = Rect2(32, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1lc7"]
atlas = ExtResource("2_dt1at")
region = Rect2(48, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6xooo"]
atlas = ExtResource("2_dt1at")
region = Rect2(64, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0gu3"]
atlas = ExtResource("2_dt1at")
region = Rect2(80, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqsjs"]
atlas = ExtResource("2_dt1at")
region = Rect2(96, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cj77i"]
atlas = ExtResource("2_dt1at")
region = Rect2(112, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ysjmm"]
atlas = ExtResource("2_dt1at")
region = Rect2(128, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnp7x"]
atlas = ExtResource("2_dt1at")
region = Rect2(144, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlo8x"]
atlas = ExtResource("2_dt1at")
region = Rect2(0, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrq6d"]
atlas = ExtResource("2_dt1at")
region = Rect2(16, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vj6t8"]
atlas = ExtResource("2_dt1at")
region = Rect2(32, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_515xg"]
atlas = ExtResource("2_dt1at")
region = Rect2(48, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_67bkr"]
atlas = ExtResource("2_dt1at")
region = Rect2(64, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dks3"]
atlas = ExtResource("2_dt1at")
region = Rect2(80, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tyfpp"]
atlas = ExtResource("2_dt1at")
region = Rect2(96, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7ijk"]
atlas = ExtResource("2_dt1at")
region = Rect2(112, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_v03mv"]
atlas = ExtResource("2_dt1at")
region = Rect2(128, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ia6q"]
atlas = ExtResource("2_dt1at")
region = Rect2(144, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dwot"]
atlas = ExtResource("1_byrvp")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7b3s"]
atlas = ExtResource("1_byrvp")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1axqa"]
atlas = ExtResource("1_byrvp")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4d3au"]
atlas = ExtResource("1_byrvp")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ykd3"]
atlas = ExtResource("1_byrvp")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6gnn"]
atlas = ExtResource("1_byrvp")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_he70c"]
atlas = ExtResource("3_anxm0")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nisg2"]
atlas = ExtResource("3_anxm0")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gw6lj"]
atlas = ExtResource("3_anxm0")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hmp0v"]
atlas = ExtResource("3_anxm0")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kv1yu"]
atlas = ExtResource("3_anxm0")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x16pb"]
atlas = ExtResource("3_anxm0")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_niuc8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fubbs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eh0pn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yynof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpr5j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhv7c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ae05f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_unu71")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ka2jw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahjs6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdqlf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0stb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2bt0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mq3y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfgrn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_toweq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8hgq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuy14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wq2w8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_caeay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yjdtw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v4cn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_53bbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p85hc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdxyc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfa0o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_30lfv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s13vu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejppe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yp4tq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccmcm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7snwp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h14em")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjsau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0m7yf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w68rq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_avp7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4jp1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4rc0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3n8b1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sybhr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cy6jv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tike4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2p24")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1lc7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6xooo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0gu3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqsjs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cj77i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ysjmm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnp7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlo8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrq6d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vj6t8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_515xg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_67bkr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dks3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tyfpp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7ijk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v03mv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ia6q")
}],
"loop": true,
"name": &"Death",
"speed": 60.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dwot")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7b3s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1axqa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4d3au")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ykd3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6gnn")
}],
"loop": true,
"name": &"Idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_he70c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nisg2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gw6lj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hmp0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kv1yu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x16pb")
}],
"loop": true,
"name": &"Walk",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oiitm"]
size = Vector2(16, 10)

[sub_resource type="CircleShape2D" id="CircleShape2D_g7cww"]
radius = 11.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rynyb"]
size = Vector2(20, 14)

[sub_resource type="CircleShape2D" id="CircleShape2D_kj5c4"]
radius = 159.013

[sub_resource type="Animation" id="Animation_gcjeg"]
resource_name = "Attack 1"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attacks/AttackAnim:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Atack1"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Attacks/AttackAnim:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Attacks/Atack/CollisionShape2D:shape:radius")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [1.0, 16.0312, 32.0, 48.0104, 64.0]
}

[sub_resource type="Animation" id="Animation_ytbbv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attacks/AttackAnim:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Atack1"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Attacks/AttackAnim:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Attacks/Atack/CollisionShape2D:shape:radius")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [16.0312]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tlfhu"]
_data = {
"Attack 1": SubResource("Animation_gcjeg"),
"RESET": SubResource("Animation_ytbbv")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_mqia0"]
atlas = ExtResource("5_kkkcb")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xy006"]
atlas = ExtResource("5_kkkcb")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ib3ef"]
atlas = ExtResource("5_kkkcb")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5so4"]
atlas = ExtResource("5_kkkcb")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vi21d"]
atlas = ExtResource("5_kkkcb")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pilwq"]
atlas = ExtResource("5_kkkcb")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivpi1"]
atlas = ExtResource("5_kkkcb")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_js8tk"]
atlas = ExtResource("5_kkkcb")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ouvt4"]
atlas = ExtResource("5_kkkcb")
region = Rect2(384, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1o18l"]
atlas = ExtResource("5_kkkcb")
region = Rect2(512, 128, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_fp2w6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqia0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xy006")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ib3ef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5so4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vi21d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pilwq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivpi1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_js8tk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ouvt4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1o18l")
}],
"loop": true,
"name": &"Atack1",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_owu4h"]
radius = 16.0312

[node name="WisdomSlime" type="CharacterBody2D"]
script = ExtResource("1_xvhjn")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_p0hm7")
}

[node name="Anim" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_niuc8")
animation = &"Idle"

[node name="PushBox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_oiitm")

[node name="Hitbox" type="Area2D" parent="."]

[node name="Hitbox" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_g7cww")

[node name="Hurtbox" type="Area2D" parent="."]
visible = false

[node name="Hurtbox" type="CollisionShape2D" parent="Hurtbox"]
visible = false
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_rynyb")

[node name="DetectBox" type="Area2D" parent="."]
visible = false

[node name="Detection" type="CollisionShape2D" parent="DetectBox"]
shape = SubResource("CircleShape2D_kj5c4")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Attacks" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tlfhu")
}

[node name="AttackAnim" type="AnimatedSprite2D" parent="Attacks"]
visible = false
sprite_frames = SubResource("SpriteFrames_fp2w6")
animation = &"Atack1"

[node name="Atack" type="Area2D" parent="Attacks"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attacks/Atack"]
shape = SubResource("CircleShape2D_owu4h")

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="body_entered" from="DetectBox" to="." method="_on_detect_box_body_entered"]
[connection signal="body_exited" from="DetectBox" to="." method="_on_detect_box_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
